src/test/ui/binop/binary-op-on-double-ref.stderr
error[E0369]: cannot mod `&&{integer}` by `{integer}`
  --> $DIR/binary-op-on-double-ref.rs:5:11
   |
LL |         x % 2 == 0
   |         - ^ - {integer}
   |         |
   |         &&{integer}
   |
help: `%` can be used on `{integer}`, you can dereference `x`
   |
LL |         *x % 2 == 0
   |         ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
